tests/ui/target_modifiers/incompatible_pauth.error_generated.stderr
error: mixing `-Zpointer-authentication` will cause an ABI mismatch in crate `incompatible_pauth`
  --> $DIR/incompatible_pauth.rs:14:1
   |
LL | #![feature(no_core)]
   | ^
   |
   = help: the `-Zpointer-authentication` flag modifies the ABI so Rust crates compiled with different values of this flag cannot be used together safely
   = note: `-Zpointer-authentication=+calls,-init-fini` in this crate is incompatible with `-Zpointer-authentication=+calls,+init-fini` in dependency `pauth`
   = help: set `-Zpointer-authentication=+calls,+init-fini` in this crate or `-Zpointer-authentication=+calls,-init-fini` in `pauth`
   = help: if you are sure this will not cause problems, you may use `-Cunsafe-allow-abi-mismatch=pointer-authentication` to silence this error

error: aborting due to 1 previous error

